RESOLVED FIXED113629
[EFL][WK2] --no-tiled-backing-store build fails because of not used #if USE(COORDINATED_GRAPHICS)
https://bugs.webkit.org/show_bug.cgi?id=113629
Summary [EFL][WK2] --no-tiled-backing-store build fails because of not used #if USE(C...
Ed Bartosh
Reported 2013-03-29 17:08:30 PDT
Build fails with this kind of errors: /home/ed/git/wk/WebKit/Source/WebKit2/UIProcess/API/CoordinatedGraphics/WKCoordinatedScene.cpp: In function `OpaqueCGLayer* WKCoordinatedSceneFindScrollableContentsLayerAt(WKCoordinatedScene, WKPoint)': /home/ed/git/wk/WebKit/Source/WebKit2/UIProcess/API/CoordinatedGraphics/WKCoordinatedScene.cpp:40:31: error: invalid use of incomplete type `class WebCore::CoordinatedGraphicsScene' In file included from /home/ed/git/wk/WebKit/Source/WebKit2/UIProcess/API/CoordinatedGraphics/WKCoordinatedScene.cpp:33:0: /home/ed/git/wk/WebKit/Source/WebKit2/UIProcess/CoordinatedGraphics/WKCoordinatedSceneAPICast.h:35:7: error: forward declaration of `class WebCore::CoordinatedGraphicsScene' /home/ed/git/wk/WebKit/Source/WebKit2/UIProcess/API/CoordinatedGraphics/WKCoordinatedScene.cpp:40:63: error: `FloatPoint' is not a member of `WebCore' /home/ed/git/wk/WebKit/Source/WebKit2/UIProcess/API/CoordinatedGraphics/WKCoordinatedScene.cpp: In function `uint32_t WKCoordinatedSceneGetLayerID(WKCoordinatedSceneLayer)': /home/ed/git/wk/WebKit/Source/WebKit2/UIProcess/API/CoordinatedGraphics/WKCoordinatedScene.cpp:45:25: error: invalid use of incomplete type `class WebCore::TextureMapperLayer' In file included from /home/ed/git/wk/WebKit/Source/WebKit2/UIProcess/API/CoordinatedGraphics/WKCoordinatedScene.cpp:33:0: /home/ed/git/wk/WebKit/Source/WebKit2/UIProcess/CoordinatedGraphics/WKCoordinatedSceneAPICast.h:36:7: error: forward declaration of `class WebCore::TextureMapperLayer' /home/ed/git/wk/WebKit/Source/WebKit2/UIProcess/API/CoordinatedGraphics/WKCoordinatedScene.cpp: In function `void WKCoordinatedSceneScrollBy(WKCoordinatedSceneLayer, WKSize)': /home/ed/git/wk/WebKit/Source/WebKit2/UIProcess/API/CoordinatedGraphics/WKCoordinatedScene.cpp:50:18: error: invalid use of incomplete type `class WebCore::TextureMapperLayer' In file included from /home/ed/git/wk/WebKit/Source/WebKit2/UIProcess/API/CoordinatedGraphics/WKCoordinatedScene.cpp:33:0: /home/ed/git/wk/WebKit/Source/WebKit2/UIProcess/CoordinatedGraphics/WKCoordinatedSceneAPICast.h:36:7: error: forward declaration of `class WebCore::TextureMapperLayer' /home/ed/git/wk/WebKit/Source/WebKit2/UIProcess/API/CoordinatedGraphics/WKCoordinatedScene.cpp:50:29: error: `FloatSize' is not a member of `WebCore' /home/ed/git/wk/WebKit/Source/WebKit2/UIProcess/API/CoordinatedGraphics/WKCoordinatedScene.cpp: In function `uint32_t WKCoordinatedSceneGetLayerID(WKCoordinatedSceneLayer)': /home/ed/git/wk/WebKit/Source/WebKit2/UIProcess/API/CoordinatedGraphics/WKCoordinatedScene.cpp:46:1: error: control reaches end of non-void function [-Werror=return-type] /home/ed/git/wk/WebKit/Source/WebKit2/UIProcess/API/CoordinatedGraphics/WKCoordinatedScene.cpp: In function `OpaqueCGLayer* WKCoordinatedSceneFindScrollableContentsLayerAt(WKCoordinatedScene, WKPoint)': /home/ed/git/wk/WebKit/Source/WebKit2/UIProcess/API/CoordinatedGraphics/WKCoordinatedScene.cpp:41:1: error: control reaches end of non-void function [-Werror=return-type] cc1plus: all warnings being treated as errors make[2]: *** [Source/WebKit2/CMakeFiles/ewebkit2.dir/UIProcess/API/CoordinatedGraphics/WKCoordinatedScene.cpp.o] Error 1 make[1]: *** [Source/WebKit2/CMakeFiles/ewebkit2.dir/all] Error 2 make: *** [all] Error 2
Attachments
Patch (5.01 KB, patch)
2013-03-29 17:20 PDT, Ed Bartosh
no flags
Patch (4.51 KB, patch)
2013-04-04 15:00 PDT, Ed Bartosh
no flags
Ed Bartosh
Comment 1 2013-03-29 17:20:50 PDT
Ed Bartosh
Comment 2 2013-04-01 01:06:46 PDT
Reverting back to UNCONFIRMED after reading https://bugs.webkit.org/page.cgi?id=fields.html#status
Ed Bartosh
Comment 3 2013-04-01 04:04:07 PDT
Added WK2 reviewer as patch also changes WK2 code.
Ed Bartosh
Comment 4 2013-04-04 15:00:40 PDT
Created attachment 196535 [details] Patch Rebased. Please, review!
WebKit Commit Bot
Comment 5 2013-04-05 12:25:34 PDT
Comment on attachment 196535 [details] Patch Clearing flags on attachment: 196535 Committed r147776: <http://trac.webkit.org/changeset/147776>
WebKit Commit Bot
Comment 6 2013-04-05 12:25:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.