[EFL][WK2] --no-tiled-backing-store build fails because of not used #if USE(COORDINATED_GRAPHICS) https://bugs.webkit.org/show_bug.cgi?id=113629

Patch by Ed Bartosh <bartosh@gmail.com> on 2013-04-05
Reviewed by Simon Fraser.

Wrapped code related to coordinated graphics with #if USE(COORDINATED_GRAPHICS)
* UIProcess/API/CoordinatedGraphics/WKCoordinatedScene.cpp:
* UIProcess/efl/WebView.cpp:
(WebKit::WebView::initialize):
(WebKit):
(WebKit::WebView::paintToCairoSurface):
(WebKit::WebView::updateViewportSize):

Canonical link: https://commits.webkit.org/132415@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147776 268f45cc-cd09-0410-ab3c-d52691b4dbfc